--- a/index.html
+++ b/index.html
@@ -1,42 +1,126 @@
 ---
-layout: front
-page: Home
-testimonies:
-- name: Agnes
-  country: Malaysia
-  video: https://player.vimeo.com/video/369976236
-  status: active
-  text: "..the most precious part for me is.. seeing the families who came from different countries.. for ONE MISSION, ONE HEART and ONE MIND and it made me realise that missionary can be done in a family context and.. will work in God’s Grace."
-    
-- name: Janka
-  country: Slovakia
-  video: https://player.vimeo.com/video/360154803
-  text: "“... God didn’t forget about me especially during personal prayer time..
-    He calls me to.. fight for His people through His love.. He spoke to me about
-    some strategies to approach and reach out to.. care for His people.”"
+layout: crossroad
+title: CROSSROAD SCHOOL OF DISCIPLESHIP
+page: Crossroad School of Discipleship
+contents:
+- title: Making disciples who make disciples
+  sections:
+  - text: 2000 years ago, Jesus looked at a group of young people, loved them and
+      challenged them, ''Come, Follow Me''. And empowered by the Holy Spirit, all
+      of them went on to turn the world of their day upside down. This same challenge
+      is posed to you today by the same Jesus.
+  - text: 'For 10 weeks, we will rediscover and pursue Jesus radically through teaching,
+      prayer, scripture and one on one accompaniment. We will cover topics like: intimacy
+      with God, living by the Spirit, reshaping our worldview and many more. With
+      a lifestyle of discipleship at the core of this school, we aim to transition
+      our worldly perspective to Kingdom perspective.'
+  - text: If you're stuck at a crossroad, this school is made for you! God's plan
+      for you was never meant to be mediocre. Be a disciple. Make disciples.
+batches:
+- name: batch III
+  id: batch-3
+  folder: crossroad-3
+  testimonies:
+  - name: Alexendrinne, Mauritius, Ghana
+    image: alexendrinne_mauritius.png
+    active: active
+  - name: Andrea, Slovakia
+    image: andrea_slovakia.png
+  - name: Anna, Slovakia
+    image: anna_slovakia.png
+  - name: China
+    image: china.png
+  - name: Darren, UK
+    image: darren_uk.png
+  - name: Jean David, Mauritius
+    image: jeandavid_mauritius.png
+  - name: Lenka, Slovakia
+    image: lenka_slovakia.png
+  - name: Nicky, Oman
+    image: nicky_oman.png
+  - name: Patience, Uganda
+    image: patience_uganda.png
+  - name: Peter, Uganda
+    image: peter_uganda.png
+  - name: Sandra, New Zealand
+    image: sandra_new_zealand.png
+  - name: Veloisa, India
+    image: veloisa_india.png
+  - name: Victor, Brazil
+    image: victor_brazil.png
+- name: batch II
+  id: batch-2
+  folder: crossroad-2  
+  testimonies:
+  - name: Christopher, Ghana
+    image: christopher_ghana.png
+    active: active
+  - name: Annabel, UK
+    image: annabelle_uk.png
+  - name: Marian, Slovakia
+    image: marian_slovakia.png
+  - name: Catherine, Kenya
+    image: catherine_kenya.png
+  - name: Genevie, Malaysia
+    image: genevie_malaysia.png
+  - name: Giovana, Brazil
+    image: giovanna_brazil.png
+  - name: Marcus, China
+    image: marcus_china.png
+  - name: Miguel, Mauritius
+    image: miguel_mauritius.png
+  - name: Choolwe, Zambia
+    image: choolwe_zambia.png
+  - name: Klaudia, Slovakia
+    image: klaudia_slovakia.png
+  - name: Shaun, Malaysia
+    image: shaun_malaysia.png
+  - name: Noel, Malawi
+    image: noel_malawi.png
+  - name: Elizabeth, Indonesia
+    image: elisabeth_indonesia.png
+  - name: Archana, Australia
+    image: archana_australia.png
+  - name: Betty, Uganda
+    image: betty_uganda.png
+  - name: Teresa, Singapore
+    image: teresa_singapore.png
+  - name: Alvina, Malaysia
+    image: alvina_malaysia.png
+- name: batch I
+  id: batch-1
+  folder: crossroad-1
+  testimonies:
+  - name: Marianna, Slovakia
+    image: marianna_slovakia.png
+    active: active
+  - name: Tanisha, Qatar
+    image: tanisha_qatar.png
+  - name: Patrik, Slovakia
+    image: patrik_slovakia.png
+  - name: Christine, Malaysia
+    image: christine_malaysia.png
+  - name: Kenny, Nigeria
+    image: kenny_nigeria.png
+  - name: Daniel, Pakistan
+    image: daniel_pakistan.png
+  - name: Gerry, Indonesia
+    image: gerry_indonesia.png
+  - name: Grace, USA
+    image: grace_usa.png
+  - name: Nancy, Indonesia
+    image: nancy_indonesia.png
+  - name: Gracianne, Malaysia
+    image: gracianne_malaysia.png
+  - name: Christabel, Zambia
+    image: christabel_zambia.png
+  - name: Martina, Croatia
+    image: martina_croatia.png
+  - name: Jaish, Pakistan
+    image: jaish_pakistan.png
+  - name: Sharon, Malaysia
+    image: sharon_malaysia.png
+  - name: Antony, India
+    image: anthony_india.png
 
-- name: Mario
-  country: Germany
-  video: https://player.vimeo.com/video/370033527
-  text: "..there was a burning love in my heart.. but not enough.. to give to anyone. That’s when I heard about DINE, I accepted it.. We were taught to show love.. Now, the amount of fire I have inside cannot be contained..."
-    
-- name: Shando
-  country: Germany
-  video: https://www.youtube.com/embed/pd8oj9NYRls?rel=0
-  text: "We’ve got to meet so many spirit filled, talented people. We learnt so many things about ministry and evangelisation.. and literally see Jesus changing lives.. It’s really helped me personally develop new skills and gifts in my own music ministry."
-  
-- name: Leon
-  country: Germany
-  video: https://www.youtube.com/embed/hqQYKkAIcGA?rel=0
-  text: "..on [outreach].. when I saw this man.. this emotion of him just transferred through his eyes to my eye.. My partner and I prayed and felt the sadness.. and for sure, God has already planted a seed inside his heart!..." 
-  
-- name: Jessica
-  country: Brazil
-  video: https://www.youtube.com/embed/_TFbJTt429w?rel=0
-  text: "I met twelve different nations.. with the same heart, mind and desire to take God to this beautiful world.. and to these people that’s so desperate in search for.. God.. to fulfil their hearts and my heart as well."   
-  
-- name: Darren
-  country: United Kingdom
-  video: https://www.youtube.com/embed/pJiK3SqW0fo?rel=0
-  text: "..this opportunity made me walk the talk! I went out spoke to people that were quite intimidating.. Speaking to them, I learnt that there are so many people suffering (inside) and if we don’t go and help them then who will?"       
 ---
